Feature/refactoring (#184)
* switched to interfaces

* removed class Holder - switched to Optional

* switched to Composite to abstract the implementation

* added annotation tom make sure it is a FunctionalInterface in the future

* removed useless Optional

* cleaning

* commented out unused attribute

* removed deprecated call (reflection)

* added annotation tom make sure it is a FunctionalInterface in the future

* reformatting for readability

* removed syntactical stuff that is unused

* switched lines for readability

* added annotation tom make sure it is a FunctionalInterface in the future

* switched to private

* marked as deprecated - will be replaced by Function<A,B>

* reformatting for readability

* renamed the MainView to MainLayout

* removed useless (empty) methods

* code cleaning

* removed useless (empty) methods

* merged definition classes

* cleared up the way of the instantiation  and fixed BUG #159

* typo

* cleared up tests and demos